feat(miraflores): Actualiza los íconos correctos

--- a/pages/miraflores/index.html
+++ b/pages/miraflores/index.html
@@ -3594,7 +3594,7 @@
 
                                         <h5 style="font-size: 14px"
                                             class="text-gray-light-ocensa mt-4">
-                                            Hidrante
+                                            Hidratante
                                         </h5>
                                         <div class="row mt-3">
                                             <div class="col-12 col-lg-6">
@@ -3671,54 +3671,17 @@
                                                     class="d-flex align-items-center card-interactive-icons__container mt-2">
                                                     <div
                                                         class="card-interactive-icons___box-icon"
-                                                        style="--border-fill: #ff0000">
-                                                        <svg
-                                                            data-name="Grupo 655"
-                                                            xmlns="http://www.w3.org/2000/svg"
-                                                            width="28"
-                                                            height="22.5"
-                                                            viewBox="0 0 28 22.5">
+                                                        style="--border-fill: #ffd800">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" width="25.469" height="37.667" viewBox="0 0 25.469 37.667">
                                                             <defs>
-                                                                <clippath
-                                                                    id="mxhzklgpna">
-                                                                    <path
-                                                                        data-name="Rectángulo 170"
-                                                                        style="fill: #9a9a9a"
-                                                                        d="M0 0h28v22.5H0z" />
-                                                                </clippath>
+                                                                <clipPath id="fncuvfmawa">
+                                                                    <path data-name="Rectángulo 276" style="fill:#707070" d="M0 0h25.469v37.667H0z"/>
+                                                                </clipPath>
                                                             </defs>
-                                                            <g
-                                                                data-name="Grupo 654"
-                                                                style="clip-path: url(#mxhzklgpna)">
-                                                                <path
-                                                                    data-name="Trazado 879"
-                                                                    d="M35.233 19.9a4.539 4.539 0 0 1-3.251-1.386 2.666 2.666 0 0 1-.712-2.348c.329-2.433 2.384-5.172 3.581-6.589a.515.515 0 0 1 .763 0c1.2 1.416 3.252 4.156 3.581 6.589a2.668 2.668 0 0 1-.711 2.348 4.539 4.539 0 0 1-3.251 1.386zm0-9.214c-1.133 1.404-2.708 3.659-2.971 5.614a1.665 1.665 0 0 0 .442 1.523 3.506 3.506 0 0 0 5.057 0A1.667 1.667 0 0 0 38.2 16.3c-.258-1.955-1.832-4.211-2.967-5.619z"
-                                                                    transform="translate(-21.233 -6.395)"
-                                                                    style="fill: #9a9a9a" />
-                                                                <path
-                                                                    data-name="Trazado 880"
-                                                                    d="M36.27 29.674a.5.5 0 0 1-.339-.132 1.875 1.875 0 0 1-.592-1.084 1.907 1.907 0 0 1 .585-1.624.5.5 0 1 1 .692.721.919.919 0 0 0-.29.75.888.888 0 0 0 .282.5.5.5 0 0 1-.339.869z"
-                                                                    transform="translate(-24.021 -18.152)"
-                                                                    style="fill: #9a9a9a" />
-                                                                <path
-                                                                    data-name="Trazado 881"
-                                                                    d="M27.5 16.5H.5A.5.5 0 0 1 0 16V.5A.5.5 0 0 1 .5 0h27a.5.5 0 0 1 .5.5V16a.5.5 0 0 1-.5.5zM1 15.5h26V1H1z"
-                                                                    style="fill: #9a9a9a" />
-                                                                <path
-                                                                    data-name="Trazado 882"
-                                                                    d="M40.437 53.939h-4a.5.5 0 0 1-.5-.5v-4.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4.5a.5.5 0 0 1-.5.5zm-3.5-1h3v-3.5h-3z"
-                                                                    transform="translate(-24.437 -32.939)"
-                                                                    style="fill: #9a9a9a" />
-                                                                <path
-                                                                    data-name="Trazado 883"
-                                                                    d="M38.187 65h-8a.5.5 0 0 1-.5-.5V63a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v1.5a.5.5 0 0 1-.5.5zm-7.5-1h7v-.5h-7z"
-                                                                    transform="translate(-20.187 -42.5)"
-                                                                    style="fill: #9a9a9a" />
-                                                                <path
-                                                                    data-name="Trazado 884"
-                                                                    d="M29.187 18.189h-24a.5.5 0 0 1-.5-.5v-12.5a.5.5 0 0 1 .5-.5h24a.5.5 0 0 1 .5.5v12.5a.5.5 0 0 1-.5.5zm-23.5-1h23v-11.5h-23z"
-                                                                    transform="translate(-3.187 -3.189)"
-                                                                    style="fill: #9a9a9a" />
+                                                            <g data-name="Grupo 838">
+                                                                <g data-name="Grupo 837" style="clip-path:url(#fncuvfmawa)">
+                                                                    <path data-name="Trazado 1895" d="M24.61 15.16H23.6a1.688 1.688 0 0 0-3.308-.67h-1.467V10.7A1.154 1.154 0 0 0 20.1 9.567v-.739a1.158 1.158 0 0 0-1.294-1.137A5.447 5.447 0 0 0 15.1 2.917v-.7a.844.844 0 0 0-.724-.834V.95a.95.95 0 0 0-.951-.95H12.05a.949.949 0 0 0-.95.95v.434a.844.844 0 0 0-.724.834v.7a5.454 5.454 0 0 0-3.71 4.773 1.159 1.159 0 0 0-1.3 1.137v.739a1.154 1.154 0 0 0 1.28 1.133v3.785H5.174a1.688 1.688 0 0 0-3.308.67H.859a.858.858 0 0 0-.859.859v2.455a.859.859 0 0 0 .859.855h1.006a1.687 1.687 0 0 0 3.307.67h1.474v3.784a1.155 1.155 0 0 0-1.276 1.137v.742a1.154 1.154 0 0 0 1.276 1.137V33.8a3.169 3.169 0 0 0-3.5 3.121v.354a.391.391 0 0 0 .391.391h18.4a.391.391 0 0 0 .391-.391v-.354a3.169 3.169 0 0 0-3.5-3.121v-7.009a1.155 1.155 0 0 0 1.272-1.136v-.742a1.154 1.154 0 0 0-1.277-1.137v-3.783H20.3a1.687 1.687 0 0 0 3.307-.67h1.003a.858.858 0 0 0 .859-.855v-2.455a.856.856 0 0 0-.859-.853zM1.867 18.542H.861a.076.076 0 0 1-.077-.073v-2.455a.076.076 0 0 1 .077-.073h1.006zm2.558 1.124a.894.894 0 0 1-1.516.63.883.883 0 0 1-.26-.63v-4.849a.888.888 0 0 1 1.776 0v4.848M11.883.95a.166.166 0 0 1 .167-.166h1.375c.254 0 .144.394.167.589h-1.711zm-.723 1.267a.063.063 0 0 1 .064-.064h3.026a.065.065 0 0 1 .064.064v.5a15.542 15.542 0 0 0-2.642-.064 8.164 8.164 0 0 0-.513.064zM8.794 4.784A4.687 4.687 0 0 1 12.1 3.415h1.276a4.686 4.686 0 0 1 4.651 4.276H7.445a4.63 4.63 0 0 1 1.35-2.907zM5.206 19.212v-3.941h1.44v3.94zm14 15.369a2.342 2.342 0 0 1 2.34 2.3H3.931a2.341 2.341 0 0 1 2.339-2.3zM7.429 26.792H9.38V33.8H7.429zm2.733 0h2.183V33.8h-2.183zm2.965 0h2.183V33.8h-2.183zm2.967 0h1.951V33.8h-1.952zm2.873-2.231a.353.353 0 0 1 .353.353v.742a.354.354 0 0 1-.353.353H6.507a.354.354 0 0 1-.354-.353v-.742a.355.355 0 0 1 .354-.353zm-.923-.782H7.429V10.706h10.614V23.78M6.507 9.922a.355.355 0 0 1-.355-.355v-.739a.355.355 0 0 1 .355-.355h12.458a.355.355 0 0 1 .355.355v.738a.355.355 0 0 1-.355.355zm13.758 9.29h-1.44v-3.941h1.44zm2.558.453a.887.887 0 1 1-1.775 0v-4.847a.888.888 0 0 1 1.776 0v4.848m1.865-1.2a.076.076 0 0 1-.077.073H23.6v-2.6h1.006a.076.076 0 0 1 .077.073zm-11.953-4.982a3.826 3.826 0 1 0 3.827 3.827 3.83 3.83 0 0 0-3.827-3.827zm0 6.871a3.044 3.044 0 1 1 3.044-3.044 3.048 3.048 0 0 1-3.044 3.044m0-5.194a2.151 2.151 0 0 0 0 4.3 2.151 2.151 0 0 0 0-4.3m0 3.518a1.368 1.368 0 0 1 0-2.736 1.368 1.368 0 0 1 0 2.736" style="fill:#707070"/>
+                                                                </g>
                                                             </g>
                                                         </svg>
                                                     </div>
@@ -3802,56 +3765,22 @@
                                                     class="d-flex align-items-center card-interactive-icons__container mt-2">
                                                     <div
                                                         class="card-interactive-icons___box-icon"
-                                                        style="--border-fill: #27ff00">
-                                                        <svg
-                                                            data-name="Grupo 663"
-                                                            xmlns="http://www.w3.org/2000/svg"
-                                                            width="26.633"
-                                                            height="21.401"
-                                                            viewBox="0 0 26.633 21.401">
+                                                        style="--border-fill: #21a605">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" width="31.102" height="30.237" viewBox="0 0 31.102 30.237">
                                                             <defs>
-                                                                <clippath
-                                                                    id="70d5v066ca">
-                                                                    <path
-                                                                        data-name="Rectángulo 171"
-                                                                        style="fill: #9a9a9a"
-                                                                        d="M0 0h26.633v21.401H0z" />
-                                                                </clippath>
+                                                                <clipPath id="2hcze1dgxa">
+                                                                    <path data-name="Rectángulo 277" style="fill:#707070" d="M0 0h31.102v30.237H0z"/>
+                                                                </clipPath>
                                                             </defs>
-                                                            <g
-                                                                data-name="Grupo 662"
-                                                                style="clip-path: url(#70d5v066ca)">
-                                                                <path
-                                                                    data-name="Trazado 885"
-                                                                    d="M26.157 15.694H.475A.475.475 0 0 1 0 15.219V.475A.475.475 0 0 1 .475 0h25.682a.475.475 0 0 1 .475.475v14.744a.475.475 0 0 1-.475.476zM.951 14.743h24.73V.951H.951z"
-                                                                    style="fill: #9a9a9a" />
-                                                                <path
-                                                                    data-name="Trazado 886"
-                                                                    d="M40.218 53.67h-3.8a.475.475 0 0 1-.475-.476v-4.28a.475.475 0 0 1 .475-.475h3.8a.475.475 0 0 1 .476.475v4.28a.475.475 0 0 1-.476.476zm-3.329-.951h2.854V49.39h-2.854z"
-                                                                    transform="translate(-24.999 -33.695)"
-                                                                    style="fill: #9a9a9a" />
-                                                                <path
-                                                                    data-name="Trazado 887"
-                                                                    d="M37.772 64.878h-7.609a.476.476 0 0 1-.476-.476v-1.426a.476.476 0 0 1 .476-.476h7.609a.475.475 0 0 1 .476.476V64.4a.475.475 0 0 1-.476.476zm-7.134-.951H37.3v-.475h-6.662z"
-                                                                    transform="translate(-20.651 -43.477)"
-                                                                    style="fill: #9a9a9a" />
-                                                                <path
-                                                                    data-name="Trazado 888"
-                                                                    d="M27.991 17.53H5.163a.476.476 0 0 1-.476-.476V5.164a.476.476 0 0 1 .476-.475h22.828a.475.475 0 0 1 .476.475v11.89a.475.475 0 0 1-.476.476zm-22.353-.952h21.877V5.64H5.638z"
-                                                                    transform="translate(-3.26 -3.262)"
-                                                                    style="fill: #9a9a9a" />
-                                                                <path
-                                                                    data-name="Trazado 889"
-                                                                    d="M34.55 19.962a1.237 1.237 0 0 0-.346-.476 1.225 1.225 0 0 0-.79-.288 1.258 1.258 0 0 0-.192.014 1.2 1.2 0 0 0-.186.045.218.218 0 0 1-.262-.112 1.24 1.24 0 0 0-.455-.508 1.222 1.222 0 0 0-.651-.186 1.2 1.2 0 0 0-.628.172.218.218 0 0 1-.285-.055 1.632 1.632 0 0 0-1.693-.5h-.009a1.619 1.619 0 0 0-.41.189.219.219 0 0 1-.3-.063 2.433 2.433 0 0 0-.852-.717 2.425 2.425 0 0 0-2.433.149 2.433 2.433 0 0 0-.894 1.091.218.218 0 0 1-.247.13q-.088-.018-.173-.028a1.663 1.663 0 0 0-.175-.009 1.623 1.623 0 0 0-1.555 1.154H34.55zm-1.113-8.2a.218.218 0 1 1-.387.2 1.153 1.153 0 0 0-.165-.247l-.009-.011a.533.533 0 0 0-.152-.118.218.218 0 1 1 .193-.39.972.972 0 0 1 .28.215l.012.012a1.626 1.626 0 0 1 .228.335zm-2.079.147a1.369 1.369 0 1 1 .4.967 1.362 1.362 0 0 1-.4-.967m.709-.659a.934.934 0 1 0 .659-.272.928.928 0 0 0-.659.272m.289 4.157a.218.218 0 0 1-.4.172 1.416 1.416 0 0 0-.18-.315l-.009-.012a.667.667 0 0 0-.182-.164.217.217 0 0 1 .22-.375 1.107 1.107 0 0 1 .3.271l.011.012a1.875 1.875 0 0 1 .236.411zm-2.513.239a1.578 1.578 0 0 1 .463-1.118l.013-.012a1.58 1.58 0 0 1 2.224.011 1.58 1.58 0 0 1 0 2.235 1.581 1.581 0 0 1-2.7-1.118zm.772-.81a.939.939 0 1 0 .01-.012l-.01.011zm-1.354-3.2a.218.218 0 0 1-.4.167 2.3 2.3 0 0 0-.3-.534 1.039 1.039 0 0 0-.325-.286.218.218 0 1 1 .2-.385 1.454 1.454 0 0 1 .464.4 2.78 2.78 0 0 1 .357.636zm-3.825.347a2.357 2.357 0 1 1 .691 1.666 2.348 2.348 0 0 1-.691-1.666m1-1.358a1.921 1.921 0 1 0 1.358-.562 1.916 1.916 0 0 0-1.358.562m-2.216 3.827a.218.218 0 1 1-.051.433 1.472 1.472 0 0 0-.363 0 .689.689 0 0 0-.247.078.218.218 0 0 1-.215-.379 1.11 1.11 0 0 1 .4-.131 1.861 1.861 0 0 1 .473 0zm-1.05 2.3a1.582 1.582 0 1 1 1.2.158 1.575 1.575 0 0 1-1.2-.158zm-.316-1.073a1.144 1.144 0 1 0 .114-.869 1.141 1.141 0 0 0-.114.869m4.962 2.911a.217.217 0 0 1-.355.25 1.2 1.2 0 0 0-.354-.328 1.789 1.789 0 0 0-.531-.21.218.218 0 0 1 .1-.425 2.235 2.235 0 0 1 .661.264 1.629 1.629 0 0 1 .48.448zm6.667.569a1.662 1.662 0 0 1 .566.976.213.213 0 0 1 .005.051.218.218 0 0 1-.218.218H21.715a.217.217 0 0 1-.187-.245 2.061 2.061 0 0 1 2.041-1.78 2.123 2.123 0 0 1 .221.012l.043.005a2.854 2.854 0 0 1 4.746-.6 2.053 2.053 0 0 1 .351-.141h.01a2.052 2.052 0 0 1 2.036.52 1.661 1.661 0 0 1 2.1.63l.077-.014a1.675 1.675 0 0 1 .258-.021 1.653 1.653 0 0 1 1.07.391z"
-                                                                    transform="translate(-14.974 -6.693)"
-                                                                    style="fill: #9a9a9a" />
+                                                            <g data-name="Grupo 839" style="clip-path:url(#2hcze1dgxa)">
+                                                                <path data-name="Trazado 1896" d="M19.4 11.238a.518.518 0 0 0 .458-.277l.89-1.7h8.158a2.2 2.2 0 1 0 0-4.39h-8.157l-.89-1.7A.518.518 0 0 0 19.4 2.9h-.659a3.206 3.206 0 0 0-6.383 0H11.7a.517.517 0 0 0-.458.277l-.89 1.7H2.2a2.2 2.2 0 0 0 0 4.39h8.158l.89 1.7a.517.517 0 0 0 .458.277h1.36v1.825h-.6a.517.517 0 0 0-.517.517v1.867H6.223V14.09a.518.518 0 0 0-.517-.517H1.395a.518.518 0 0 0-.517.517v15.629a.517.517 0 0 0 .517.517h4.31a.517.517 0 0 0 .517-.517v-1.973h18.657v1.973a.517.517 0 0 0 .517.517h4.31a.517.517 0 0 0 .517-.517V14.09a.517.517 0 0 0-.517-.517H25.4a.518.518 0 0 0-.517.517v1.357h-5.73V13.58a.517.517 0 0 0-.517-.517h-.6v-1.825zM5.188 29.2H1.913V14.607h3.275zm20.726-14.593h3.275V29.2h-3.275zM15.034 1.1v.952a.517.517 0 0 0 1.035 0V1.1a2.167 2.167 0 0 1 1.623 1.8H13.41a2.167 2.167 0 0 1 1.623-1.8m-3.02 2.834h7.075l.492.937h-8.058zM2.2 8.231a1.16 1.16 0 0 1 0-2.32h26.707a1.16 1.16 0 0 1 0 2.32zM18.118 14.1v1.867a.517.517 0 0 0 .517.517h6.243v10.227H6.223v-10.23h6.243a.517.517 0 0 0 .517-.517V14.1zM14.1 11.238h2.909v1.825H14.1zM12.013 10.2l-.492-.937h8.059l-.492.937z" style="fill:#707070"/>
                                                             </g>
                                                         </svg>
                                                     </div>
                                                     <div
                                                         class="card-interactive-icons___box-description">
                                                         <p>
-                                                            Hidrante
+                                                            Hidratante
                                                             <br />
                                                             Simple de Espuma
                                                         </p>
