chore(coveñas): Oculta elementos solicitados por el cliente

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -609,7 +609,7 @@
                       </div>
                     </div>
 
-                    <div
+                    <!-- <div
                       data-target="covenas-monitoreo-4"
                       style="gap: 16px"
                       class="d-flex align-items-center mt-3 card-interactive-icons__container">
@@ -635,7 +635,8 @@
                           de Emisión
                         </p>
                       </div>
-                    </div>
+                    </div> -->
+
                   </div>
                   <div class="col-12 col-lg-6 mt-3 mt-lg-0">
                     <div
@@ -1057,7 +1058,8 @@
                     </div>
                   </div>
                   <div class="col-12 col-lg-6">
-                    <div
+
+                    <!-- <div
                       data-target="covenas-monitoreo-10"
                       style="gap: 16px"
                       class="d-flex align-items-center card-interactive-icons__container">
@@ -1120,9 +1122,9 @@
                           Doméstica (ARD)<br />
                         </p>
                       </div>
-                    </div>
+                    </div> -->
 
-                    <div
+                    <!-- <div
                       data-target="covenas-monitoreo-11"
                       style="gap: 16px"
                       class="d-flex align-items-center mt-3 card-interactive-icons__container">
@@ -1180,7 +1182,8 @@
                           Doméstica (ARnD)<br />
                         </p>
                       </div>
-                    </div>
+                    </div> -->
+
                   </div>
                 </div>
               </div>
@@ -1483,7 +1486,8 @@
                       class="card-interactive-icons___title font-weight-bold text-gray-light-ocensa">
                       Gestión Integral de Residuos
                     </h6>
-                    <div
+
+                    <!-- <div
                       data-target="covenas-monitoreo-14"
                       style="gap: 16px"
                       class="d-flex align-items-center card-interactive-icons__container">
@@ -1560,7 +1564,7 @@
                           Aprovechable<br />
                         </p>
                       </div>
-                    </div>
+                    </div> -->
 
                     <div
                       data-target="covenas-monitoreo-15"
@@ -1636,7 +1640,8 @@
                 <div
                   id="accordion-item-gestion-integral-residuos"
                   class="accordion-item flex-column">
-                  <div
+
+                  <!-- <div
                     data-target="covenas-monitoreo-14"
                     style="gap: 16px"
                     class="d-flex align-items-center card-interactive-icons__container">
@@ -1713,7 +1718,7 @@
                         Aprovechable<br />
                       </p>
                     </div>
-                  </div>
+                  </div> -->
 
                   <div
                     data-target="covenas-monitoreo-15"
@@ -7456,7 +7461,7 @@
                       class="location-map-dot"></span>
                     <span
                       style="left: 783px; top: 397px"
-                      class="location-map-dot"></span>
+                      class="location-map-dot"></span>  
                     <span
                       style="left: 767px; top: 433px"
                       class="location-map-dot"></span>
