update(coveñas): Ambiental - Aguas Subterráneas - Actualiza los puntos en el mapa

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -5182,28 +5182,40 @@
                     class="dots-map-2024 dots-monitoreo d-none"
                     id="covenas-monitoreo-3">
                     <span
-                      style="--outline-color: #0036ff; left: 355px; top: 275px"
+                      style="--outline-color: #0036ff; left: 368px; top: 522px"
                       class="location-map-dot"></span>
                     <span
-                      style="--outline-color: #0036ff; left: 326px; top: 302px"
+                      style="--outline-color: #0036ff; left: 416px; top: 576px"
                       class="location-map-dot"></span>
                     <span
-                      style="--outline-color: #0036ff; left: 380px; top: 306px"
+                      style="--outline-color: #0036ff; left: 441px; top: 488px"
                       class="location-map-dot"></span>
                     <span
-                      style="--outline-color: #0036ff; left: 426px; top: 304px"
+                      style="--outline-color: #0036ff; left: 479px; top: 472px"
                       class="location-map-dot"></span>
                     <span
-                      style="--outline-color: #0036ff; left: 356px; top: 320px"
+                      style="--outline-color: #0036ff; left: 496px; top: 526px"
                       class="location-map-dot"></span>
                     <span
-                      style="--outline-color: #0036ff; left: 306px; top: 374px"
+                      style="--outline-color: #0036ff; left: 521px; top: 502px"
                       class="location-map-dot"></span>
                     <span
-                      style="--outline-color: #0036ff; left: 584px; top: 488px"
+                      style="--outline-color: #0036ff; left: 690px; top: 408px"
                       class="location-map-dot"></span>
                     <span
-                      style="--outline-color: #0036ff; left: 617px; top: 515px"
+                      style="--outline-color: #0036ff; left: 712px; top: 406px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="--outline-color: #0036ff; left: 729px; top: 409px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="--outline-color: #0036ff; left: 736px; top: 421px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="--outline-color: #0036ff; left: 743px; top: 408px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="--outline-color: #0036ff; left: 761px; top: 408px"
                       class="location-map-dot"></span>
                   </div>
 
