--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -5374,16 +5374,28 @@
                     class="dots-map-2024 dots-monitoreo d-none"
                     id="covenas-monitoreo-12">
                     <span
-                      style="--outline-color: #ff7171; left: 404px; top: 308px"
+                      style="--outline-color: #ff7171; left: 414px; top: 317px"
                       class="location-map-dot"></span>
                     <span
-                      style="--outline-color: #ff7171; left: 462px; top: 315px"
+                      style="--outline-color: #ff7171; left: 444px; top: 316px"
                       class="location-map-dot"></span>
                     <span
-                      style="--outline-color: #ff7171; left: 480px; top: 329px"
+                      style="--outline-color: #ff7171; left: 445px; top: 336px"
                       class="location-map-dot"></span>
                     <span
-                      style="--outline-color: #ff7171; left: 519px; top: 365px"
+                      style="--outline-color: #ff7171; left: 457px; top: 320px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="--outline-color: #ff7171; left: 461px; top: 341px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="--outline-color: #ff7171; left: 469px; top: 329px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="--outline-color: #ff7171; left: 492px; top: 325px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="--outline-color: #ff7171; left: 517px; top: 376px"
                       class="location-map-dot"></span>
                     <span
                       style="--outline-color: #ff7171; left: 419px; top: 515px"
