update(coveñas): Ambiental - Generadores de Emisión de Equipos - Actualiza los puntos en el mapa

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -5449,7 +5449,13 @@
                     class="dots-map-2024 dots-monitoreo d-none"
                     id="covenas-monitoreo-15">
                     <span
-                      style="--outline-color: #ffa921; left: 442px; top: 402px"
+                      style="--outline-color: #ffa921; left: 446px; top: 317px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="--outline-color: #ffa921; left: 459px; top: 321px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="--outline-color: #ffa921; left: 471px; top: 327px"
                       class="location-map-dot"></span>
                   </div>
 
