update(coveñas): SRE - Hidratante Monitor de Espuma - Actualiza los puntos en el mapa

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -7406,7 +7406,7 @@
                       style="left: 545px; top: 334px"
                       class="location-map-dot"></span>
                     <span
-                      style="left: 533px; top: 351px"
+                      style="left: 548px; top: 353px"
                       class="location-map-dot"></span>
                     <span
                       style="left: 510px; top: 354px"
@@ -7469,22 +7469,22 @@
                       style="left: 783px; top: 397px"
                       class="location-map-dot"></span>  
                     <span
-                      style="left: 767px; top: 433px"
+                      style="left: 767px; top: 430px"
                       class="location-map-dot"></span>
                     <span
-                      style="left: 755px; top: 453px"
+                      style="left: 755px; top: 450px"
                       class="location-map-dot"></span>
                     <span
-                      style="left: 734px; top: 469px"
+                      style="left: 731px; top: 472px"
                       class="location-map-dot"></span>
                     <span
-                      style="left: 712px; top: 487px"
+                      style="left: 703px; top: 491px"
                       class="location-map-dot"></span>
                     <span
-                      style="left: 659px; top: 480px"
+                      style="left: 668px; top: 485px"
                       class="location-map-dot"></span>
                     <span
-                      style="left: 620px; top: 462px"
+                      style="left: 636px; top: 468px"
                       class="location-map-dot"></span>
                     <span
                       style="left: 738px; top: 324px"
@@ -7496,7 +7496,7 @@
                       style="left: 778px; top: 288px"
                       class="location-map-dot"></span>
                     <span
-                      style="left: 813px; top: 302px"
+                      style="left: 808px; top: 295px"
                       class="location-map-dot"></span>
                     <span
                       style="left: 804px; top: 313px"
@@ -7508,13 +7508,46 @@
                       style="left: 766px; top: 334px"
                       class="location-map-dot"></span>
                     <span
-                      style="left: 761px; top: 351px"
+                      style="left: 763px; top: 353px"
                       class="location-map-dot"></span>
                     <span
-                      style="left: 802px; top: 357px"
+                      style="left: 798px; top: 368px"
                       class="location-map-dot"></span>
                     <span
-                      style="left: 830px; top: 342px"
+                      style="left: 833px; top: 339px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="left: 805px; top: 343px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="left: 462px; top: 399px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="left: 483px; top: 416px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="left: 482px; top: 466px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="left: 481px; top: 507px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="left: 552px; top: 447px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="left: 582px; top: 464px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="left: 561px; top: 508px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="left: 378px; top: 518px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="left: 381px; top: 563px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="left: 450px; top: 563px"
                       class="location-map-dot"></span>
                   </div>
 
