--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -3423,7 +3423,7 @@
                   id="accordion-item-lista-areas-servicio"
                   class="row mt-lg-3 accordion-item">
                   <div class="col-12 col-lg-4">
-                    <div
+                    <!-- <div
                       data-target="covenas-operaciones-25"
                       style="gap: 16px"
                       class="d-flex align-items-center card-interactive-icons__container">
@@ -3469,7 +3469,7 @@
                           Residuos Peligrosos
                         </p>
                       </div>
-                    </div>
+                    </div> -->
 
                     <div
                       data-target="covenas-operaciones-26"
@@ -3834,7 +3834,7 @@
                       </div>
                     </div>
 
-                    <div
+                    <!-- <div
                       data-target="covenas-operaciones-34"
                       style="gap: 16px"
                       class="d-flex align-items-center card-interactive-icons__container mt-1">
@@ -3883,7 +3883,7 @@
                           Operación del Terminal
                         </p>
                       </div>
-                    </div>
+                    </div> -->
 
                     <div
                       data-target="covenas-operaciones-35"
