fix: ajuste columnas mapa terminal coveñas

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -3422,7 +3422,7 @@
                 <div
                   id="accordion-item-lista-areas-servicio"
                   class="row mt-lg-3 accordion-item">
-                  <div class="col-12 col-lg-4">
+                  <div class="col-12 col-lg-6">
                     <div
                       data-target="covenas-operaciones-25"
                       style="gap: 16px"
@@ -3599,7 +3599,7 @@
                     </div>
                   </div>
 
-                  <div class="col-12 col-lg-4">
+                  <div class="col-12 col-lg-6">
                     <div
                       data-target="covenas-operaciones-29"
                       style="gap: 16px"
@@ -3783,7 +3783,7 @@
                     </div>
                   </div>
 
-                  <div class="col-12 col-lg-4 mt-1 mt-lg-0">
+                  <div class="col-12 col-lg-6 mt-1 mt-lg-2">
                     <div
                       data-target="covenas-operaciones-33"
                       style="gap: 16px"
@@ -3935,7 +3935,9 @@
                         <p>Antenas de Comunicación</p>
                       </div>
                     </div>
+                  </div>
 
+                  <div class="col-12 col-lg-6 mt-1 mt-lg-2">
                     <div
                       data-target="covenas-operaciones-36"
                       style="gap: 16px"
