fix: add item un monitoreo-9

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -6250,6 +6250,10 @@
                       style="--outline-color: #8d12ff; left: 390px; top: 437px"
                       class="location-map-dot"
                     ></span>
+                    <span 
+                      style="--outline-color: #8d12ff;left: 464px;top: 324px;" 
+                      class="location-map-dot"
+                    ></span>
                   </div>
 
                   <div
