--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -1311,25 +1311,29 @@
                       </div>
                     </div> -->
 
-                    <!-- <div
+                    <div
                       data-target="covenas-monitoreo-11"
                       style="gap: 16px"
-                      class="d-flex align-items-center mt-3 card-interactive-icons__container">
+                      class="d-flex align-items-center mt-3 card-interactive-icons__container"
+                    >
                       <div
                         class="card-interactive-icons___box-icon"
-                        style="--border-fill: #f9a8ff; --hover-color: #ffffff">
+                        style="--border-fill: #f9a8ff; --hover-color: #ffffff"
+                      >
                         <svg
                           data-name="Vector Smart Object"
                           xmlns="http://www.w3.org/2000/svg"
                           width="71.071"
                           height="68.11"
-                          viewBox="0 0 71.071 68.11">
+                          viewBox="0 0 71.071 68.11"
+                        >
                           <defs>
                             <clippath id="7dsvthchsa">
                               <path
                                 data-name="Rectángulo 34"
                                 style="fill: #707070"
-                                d="M0 0h69.59v68.11H0z" />
+                                d="M0 0h69.59v68.11H0z"
+                              />
                             </clippath>
                           </defs>
                           <g data-name="Vector Smart Object">
@@ -1337,29 +1341,34 @@
                               <g
                                 data-name="Grupo 67"
                                 style="clip-path: url(#7dsvthchsa)"
-                                transform="translate(.001)">
+                                transform="translate(.001)"
+                              >
                                 <path
                                   data-name="Trazado 214"
                                   d="M69.826 59.512h-1.89v-48.86A10.755 10.755 0 0 0 57.105 0h-25.45a10.756 10.756 0 0 0-10.832 10.652v2.065c-2.455 1-13.356 5.428-15.2 6.088S.989 20.461.989 24.558v.52H.805a.793.793 0 1 0 0 1.585h.184v32.849H.805a.792.792 0 1 0 0 1.584h.184v6.6a.8.8 0 0 0 .805.792h68.032a.8.8 0 0 0 .806-.792V60.3a.8.8 0 0 0-.806-.792M22.435 10.652a9.155 9.155 0 0 1 9.22-9.067h25.45a9.155 9.155 0 0 1 9.22 9.067v48.86h-4.834v-48.86a4.355 4.355 0 0 0-4.386-4.314h-25.45a4.355 4.355 0 0 0-4.386 4.314v1.8h-4.834zm35.557 48.86a.8.8 0 0 0-.805.792v6.6h-8.472V61.1h.185a.792.792 0 1 0 0-1.584h-.183V26.663h.183a.793.793 0 1 0 0-1.585h-.183v-.52c0-4.1-2.788-5.093-4.632-5.753s-12.748-5.09-15.2-6.088v-2.065a2.755 2.755 0 0 1 2.775-2.729h25.445a2.755 2.755 0 0 1 2.775 2.729v48.86zM2.6 24.558c0-2.779 1.414-3.493 3.571-4.264 2.011-.719 14.059-5.62 15.618-6.255h6.125c1.559.635 13.607 5.536 15.618 6.255 2.157.771 3.571 1.484 3.571 4.264v.52H2.6zm0 2.105h44.5v32.849H2.6zm0 34.437h44.5v5.81H2.6zm56.2 0h10.22v5.81H58.8z"
                                   transform="translate(-.359 .192)"
-                                  style="fill: #707070" />
+                                  style="fill: #707070"
+                                />
                                 <path
                                   data-name="Trazado 215"
                                   d="M11.345 10.652a9.155 9.155 0 0 1 9.219-9.067h25.451a9.155 9.155 0 0 1 9.221 9.067V59.44h1.611V10.652A10.755 10.755 0 0 0 46.015 0h-25.45A10.756 10.756 0 0 0 9.733 10.652v1.776q.806 0 1.612-.006z"
                                   transform="translate(10.741 .192)"
-                                  style="fill: #707070" />
+                                  style="fill: #707070"
+                                />
                                 <path
                                   data-name="Trazado 216"
                                   d="M46.968 56.063V7.275a4.355 4.355 0 0 0-4.386-4.313H17.131a4.355 4.355 0 0 0-4.386 4.313V9l1.612-.016V7.275a2.755 2.755 0 0 1 2.775-2.729h25.45a2.755 2.755 0 0 1 2.775 2.729v48.788z"
                                   transform="translate(14.175 3.569)"
-                                  style="fill: #707070" />
+                                  style="fill: #707070"
+                                />
                               </g>
                             </g>
                           </g>
                           <path
                             data-name="Color Overlay"
                             d="M1.806 68.11a.8.8 0 0 1-.812-.789v-6.565H.81a.789.789 0 1 1 0-1.577h.184V26.515H.81a.789.789 0 1 1 0-1.576h.184v-.517c0-4.074 2.8-5.065 4.662-5.72s12.828-5.063 15.3-6.055v-2.054A10.761 10.761 0 0 1 31.852 0H57.47a10.761 10.761 0 0 1 10.9 10.593v48.516h-.01v.071h1.9a.8.8 0 0 1 .812.787v7.354a.8.8 0 0 1-.812.789zm57.356-1.576h10.287v-5.778H59.162zm-10.145 0h8.525v-6.567a.8.8 0 0 1 .81-.787h1.9V10.593a2.757 2.757 0 0 0-2.792-2.714h-25.6a2.759 2.759 0 0 0-2.793 2.714v1.7h-.01v.352c2.471.992 13.44 5.4 15.3 6.055s4.66 1.645 4.66 5.72v.517h.183a.789.789 0 1 1 0 1.576h-.184v32.666h.184a.789.789 0 1 1 0 1.577h-.184zm-46.4 0h44.778v-5.778H2.617zm59.257-7.354h4.863V10.593a9.159 9.159 0 0 0-9.277-9.016h-25.6a9.159 9.159 0 0 0-9.277 9.016v1.759h-.012v.034h4.865v-1.793A4.358 4.358 0 0 1 31.852 6.3H57.46a4.524 4.524 0 0 1 .793.069 4.33 4.33 0 0 1 3.63 4.222v48.518h-.01zm-59.257 0h44.778V26.515H2.617zm3.594-39c-2.171.766-3.594 1.475-3.594 4.239v.517H47.4v-.517c0-2.764-1.423-3.473-3.594-4.239-2.024-.716-14.147-5.59-15.716-6.222h-6.166c-1.568.635-13.69 5.508-15.714 6.224z"
-                            style="fill: #707070" />
+                            style="fill: #707070"
+                          />
                         </svg>
                       </div>
                       <div class="card-interactive-icons___box-description">
@@ -1369,7 +1378,7 @@
                           Doméstica (ARnD)<br />
                         </p>
                       </div>
-                    </div> -->
+                    </div>
                   </div>
                 </div>
               </div>
@@ -6250,8 +6259,8 @@
                       style="--outline-color: #8d12ff; left: 390px; top: 437px"
                       class="location-map-dot"
                     ></span>
-                    <span 
-                      style="--outline-color: #8d12ff;left: 464px;top: 324px;" 
+                    <span
+                      style="--outline-color: #8d12ff; left: 464px; top: 324px"
                       class="location-map-dot"
                     ></span>
                   </div>
@@ -6308,8 +6317,49 @@
                     class="dots-map-2024 dots-monitoreo d-none"
                     id="covenas-monitoreo-11"
                   >
+                    <!-- Item 1 -->
                     <span
-                      style="--outline-color: #f9a8ff; left: 393px; top: 430px"
+                      style="--outline-color: #f9a8ff; left: 421px; top: 519px"
+                      class="location-map-dot"
+                    ></span>
+                    <!-- Item 2 -->
+                    <span
+                      style="--outline-color: #f9a8ff; left: 529px; top: 471px"
+                      class="location-map-dot"
+                    ></span>
+                    <!-- Item 3 -->
+                    <span
+                      style="--outline-color: #f9a8ff; left: 596px; top: 411px"
+                      class="location-map-dot"
+                    ></span>
+                    <!-- Item 4 -->
+                    <span
+                      style="--outline-color: #f9a8ff; left: 683px; top: 444px"
+                      class="location-map-dot"
+                    ></span>
+                    <!-- Item 5 -->
+                    <span
+                      style="--outline-color: #f9a8ff; left: 739px; top: 387px"
+                      class="location-map-dot"
+                    ></span>
+                    <!-- Item 6 -->
+                    <span
+                      style="--outline-color: #f9a8ff; left: 752px; top: 313px"
+                      class="location-map-dot"
+                    ></span>
+                    <!-- Item 7 -->
+                    <span
+                      style="--outline-color: #f9a8ff; left: 782px; top: 340px"
+                      class="location-map-dot"
+                    ></span>
+                    <!-- Item 8 -->
+                    <span
+                      style="--outline-color: #f9a8ff; left: 788px; top: 298px"
+                      class="location-map-dot"
+                    ></span>
+                    <!-- Item 9 -->
+                    <span
+                      style="--outline-color: #f9a8ff; left: 808px; top: 322px"
                       class="location-map-dot"
                     ></span>
                   </div>
