fix: add monitoreo-12

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -6368,60 +6368,94 @@
                     class="dots-map-2024 dots-monitoreo d-none"
                     id="covenas-monitoreo-12"
                   >
+                    <!-- Item 1 -->
                     <span
-                      style="--outline-color: #ff7171; left: 404px; top: 308px"
+                      style="--outline-color: #ff7171; left: 411px; top: 318px"
                       class="location-map-dot"
                     ></span>
+                    <!-- Item 2 -->
                     <span
-                      style="--outline-color: #ff7171; left: 462px; top: 315px"
+                      style="--outline-color: #ff7171; left: 443px; top: 315px"
                       class="location-map-dot"
                     ></span>
+                    <!-- Item 3 -->
                     <span
-                      style="--outline-color: #ff7171; left: 480px; top: 329px"
+                      style="--outline-color: #ff7171; left: 457px; top: 320px"
                       class="location-map-dot"
                     ></span>
+                    <!-- Item 4 -->
                     <span
-                      style="--outline-color: #ff7171; left: 519px; top: 365px"
+                      style="--outline-color: #ff7171; left: 469px; top: 329px"
                       class="location-map-dot"
                     ></span>
+                    <!-- Item 5 -->
                     <span
-                      style="--outline-color: #ff7171; left: 419px; top: 515px"
+                      style="--outline-color: #ff7171; left: 444px; top: 335px"
                       class="location-map-dot"
                     ></span>
+                    <!-- Item 6 -->
                     <span
-                      style="--outline-color: #ff7171; left: 528px; top: 462px"
+                      style="--outline-color: #ff7171; left: 461px; top: 343px"
                       class="location-map-dot"
                     ></span>
+                    <!-- Item 7 -->
                     <span
-                      style="--outline-color: #ff7171; left: 596px; top: 410px"
+                      style="--outline-color: #ff7171; left: 492px; top: 326px"
                       class="location-map-dot"
                     ></span>
+                    <!-- Item 8 -->
                     <span
-                      style="--outline-color: #ff7171; left: 683px; top: 443px"
+                      style="--outline-color: #ff7171; left: 518px; top: 373px"
                       class="location-map-dot"
                     ></span>
+                    <!-- Item 9 -->
                     <span
-                      style="--outline-color: #ff7171; left: 736px; top: 388px"
+                      style="--outline-color: #ff7171; left: 420px; top: 519px"
                       class="location-map-dot"
                     ></span>
+                    <!-- Item 10 -->
                     <span
-                      style="--outline-color: #ff7171; left: 718px; top: 336px"
+                      style="--outline-color: #ff7171; left: 529px; top: 466px"
                       class="location-map-dot"
                     ></span>
+                    <!-- Item 11 -->
                     <span
-                      style="--outline-color: #ff7171; left: 754px; top: 314px"
+                      style="--outline-color: #ff7171; left: 597px; top: 410px"
                       class="location-map-dot"
                     ></span>
+                    <!-- Item 12 -->
                     <span
-                      style="--outline-color: #ff7171; left: 790px; top: 294px"
+                      style="--outline-color: #ff7171; left: 682px; top: 445px"
                       class="location-map-dot"
                     ></span>
+                    <!-- Item 13 -->
                     <span
-                      style="--outline-color: #ff7171; left: 809px; top: 323px"
+                      style="--outline-color: #ff7171; left: 738px; top: 389px"
                       class="location-map-dot"
                     ></span>
+                    <!-- Item 14 -->
                     <span
-                      style="--outline-color: #ff7171; left: 780px; top: 341px"
+                      style="--outline-color: #ff7171; left: 720px; top: 336px"
+                      class="location-map-dot"
+                    ></span>
+                    <!-- Item 15 -->
+                    <span
+                      style="--outline-color: #ff7171; left: 753px; top: 310px"
+                      class="location-map-dot"
+                    ></span>
+                    <!-- Item 16 -->
+                    <span
+                      style="--outline-color: #ff7171; left: 781px; top: 339px"
+                      class="location-map-dot"
+                    ></span>
+                    <!-- Item 17 -->
+                    <span
+                      style="--outline-color: #ff7171; left: 790px; top: 293px"
+                      class="location-map-dot"
+                    ></span>
+                    <!-- Item 18 -->
+                    <span
+                      style="--outline-color: #ff7171; left: 808px; top: 318px"
                       class="location-map-dot"
                     ></span>
                   </div>
